--- a/.github/workflows/generate-minutes.yaml
+++ b/.github/workflows/generate-minutes.yaml
@@ -11,7 +11,7 @@ jobs:
 
       - uses: actions/checkout@master
 
-      - name: Checkout tools repo
+      - name: Checkout minutes repo
         uses: actions/checkout@v2
         with:
           repository: haresfield-pc/minutes
