--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,3 +2,5 @@ logo: /img/logo.png
 permalink: /:slug/
 theme: jekyll-theme-minimal
 title: Haresfield Parish Council
+show_downloads: false
+google_analytics: UA-66499982-6
